fix: form overflow on hidden button

--- a/src/components/add/add.sass
+++ b/src/components/add/add.sass
@@ -1,6 +1,7 @@
 form.adddoo
   height: 3rem
   display: flex
+  overflow: hidden
 
   > *
     padding: 0 1rem
